convert jsx to astro, create new section and pages

--- a/src/pages/About.astro
+++ b/src/pages/About.astro
@@ -1,10 +1,10 @@
 ---
-import AboutUsComponents from '../components/AboutUsComponents';
+import AboutUsComponent from '../components/AboutUsComponents.astro';
 import "../assets/css/icons.css";
 import "../assets/css/global.css";
 import "../assets/css/pages.css";
 import Layout from '../layouts/Layout.astro';
 ---
 <Layout title="Welcome to Astro.">
-<AboutUsComponents client:load />
+<AboutUsComponent />
 </Layout>
