--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -5,7 +5,6 @@ import "../assets/css/icons.css";
  import "../assets/css/global.css";
 import "../assets/css/pages.css";
 import "../assets/css/custom.css";
-import "../pages/index.scss";
 import FeatureComponets from '../components/FeatureComponents';
 import AppComponents from '../components/AppComponents';
 import TestimonialPage from '../components/TestimonialComponents';
@@ -19,15 +18,22 @@ import SliderComponents3 from '../components/SliderComponents3';
 import { LazyMotion,domMax } from 'framer-motion';
 import OverlapComponents from '../components/OverlapComponents';
 import RotateComponents from '../components/RotateComponents';
+import Gallery from '../components/Gallery.astro';
+import ContactUs from '../components/ContactUs'
+import Productslider from '../components/Productslider.astro';
+import Feauture from '../components/Feauture.astro';
+
 ---
 
 <AppComponents client:load />
 <Layout title="Welcome to B & B Accounting services.">
 <SliderComponents client:load/> 
 <OverlapComponents client:load/>
-<TeamSlider client:load />
-<FeatureComponets client:load/>
+<Productslider />
+<Feauture />
 <RotateComponents client:load />
+<Gallery />
+<ContactUs />
 <!-- <ArchitecturePage client:load/> -->
 </Layout>
 
