--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -2,6 +2,7 @@
 import HeaderComponents from '../components/HeaderComponents';
 import HeaderData from '../components/Header/HeaderData'
 import FooterComponents from "../components/FooterComponents";
+import Footer from '../components/Footer.astro';
 interface Props {
 	title: string;
 }
@@ -18,8 +19,8 @@ const { title } = Astro.props;
 		<title>{title}</title>
 	</head>
 	<body>
- <HeaderComponents {...HeaderData}  client:load/>   
-		<slot />
+ 		<HeaderComponents {...HeaderData}  client:load/>   
+			<slot />
 		<FooterComponents client:load/>
 	</body>
 </html>
